--- a/introduce.html
+++ b/introduce.html
@@ -43,7 +43,7 @@
     <h3>바른 길로 안전하고 재미있게 가자! 아자~~!!</h3>
 </header>
 <nav>
-    <div class="top">
+    <div class="topp">
         <a href="#" ><div class="a_tag_l" id="block"> </div></a>
         <a href="#" ><div class="a_tag_r" id="itq"> </div></a>
     </div>
