--- a/introduce.html
+++ b/introduce.html
@@ -44,7 +44,7 @@
 </header>
 <nav>
     <div class="top">
-        <a href="#" ><div class="a_tag_l" id="block"> </div></a>
+        <a href="scratch.html" ><div class="a_tag_l" id="block"> </div></a>
         <a href="#" ><div class="a_tag_r" id="itq"> </div></a>
     </div>
     <div class="bottom">
