--- a/scratch.html
+++ b/scratch.html
@@ -22,7 +22,7 @@
             font-weight:bold;
                         }
     #s01, #s02, #s03{border:4px solid #FF9900;
-            width:80%;  height:25%;
+            width:300px;  height:170px;
             margin-left:auto;
             margin-right:auto;
             margin-bottom:15px;
@@ -53,3 +53,5 @@
 </body>
 
 </html>
+
+
