--- a/scratch.html
+++ b/scratch.html
@@ -13,7 +13,7 @@
            }
      main{ border:10px solid yellow;
             background-color:gray;
-            margin-left:40px;margin-right:40px;
+            margin-left:auto;margin-right:auto;
             width:84%;
             height:700px;
             text-align:center;
