--- a/introduce.html
+++ b/introduce.html
@@ -12,17 +12,17 @@
          background-size:10%;
          width:100%; height:750px;
          }
-    header{width:430px; height:130px; margin-top: 30px;
+    header{width:360px; height:130px; margin-top: 30px;
         margin-left:auto; margin-right:auto;
         border:15px solid transparent;
         border-image:url("border01.png") 100 round;
         text-align:center;
         background-color:#33FF33;  }
-    h1{color:blue;}
-    h3{color:gray;}
-    .top, .bottom{ width:450px; height:170px; margin-top:60px;
+    h2{color:blue;}
+    h4{color:gray;}
+    .top, .bottom{ width:380px; height:140px; margin-top:60px;
             margin-left:auto; margin-right:auto;}
-    .a_tag_l,.a_tag_r{width: 170px; height: 170px;
+    .a_tag_l,.a_tag_r{width: 150px; height: 150px;
             border-radius: 30px;
             border: 10px solid skyblue;
             box-shadow: 0px 0px 10px 0px darkred;
@@ -30,17 +30,17 @@
             display:inline-block; }
     .a_tag_l{float:left;}
     .a_tag_r{float:right;}
-    #block{background-image:url("block.png")     }
-    #itq{background-image:url("itq.png")     }
-    #c{background-image:url("c.png")      }
-    #maker{background-image:url("maker.png")    }
+    #block{background-image:url("block.png") ;    }
+    #itq{background-image:url("itq.png") ;    }
+    #c{background-image:url("c.png") ;     }
+    #maker{background-image:url("maker.png")  ;  }
     </style>
 
 </head>
 <body>
 <header>
-    <h1>신호등코딩컴퓨터 학원</h1>
-    <h3>바른 길로 안전하고 재미있게 가자! 아자~~!!</h3>
+    <h2>신호등코딩컴퓨터 학원</h2>
+    <h4>바른 길로 안전하고 재미있게 가자!아자~!!</h4>
 </header>
 <nav>
     <div class="top">
